Fixed white line on the right side

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <!--Sprite-->
   <!-- Header -->
-
+  
   <header class="header" id="header">
-    <div class="container">
+    <div class=".container">
       <div class="header__inner">
         <div class="header__logo">
           <img src="./img/IMAGElogo.svg" alt="logo">
@@ -37,7 +37,7 @@
           <span class="burger__item">Menu</span>
         </button>
       </div> <!--header__inner-->
-     </div> <!--container -->
+    </div> <!--container -->
   </header>
 
   <!--Main-->
