--- a/index.html
+++ b/index.html
@@ -249,8 +249,6 @@
             <div class="select__character" id="3.jpg">
               <img class="select__character__img" src="./img/IMAGEchar3.png" alt="">
             </div>
-            <div class="character__switcher__left"></div>
-            <div class="character__switcher__right"></div>
           </div>
         </div> <!--Characters info-->
       </div> <!--characters__inner-->
@@ -262,11 +260,13 @@
     <div class="container">
       <div class="gamecards__inner">
         <div class="gamecard target">
-            <div class="gamecard__content__icon">
-              <object class="gamecard__content__icon__img"  data="./img/IMAGEtarget.svg" type="image/svg+xml"></object>
-            </div>
-            <div class="gamecard__content__title">
-              Smooth FPS
+            <div class="gamecard_bgi">
+              <div class="gamecard__content__icon">
+                <object class="gamecard__content__icon__img"  data="./img/IMAGEtarget.svg" type="image/svg+xml"></object>
+              </div>
+              <div class="gamecard__content__title">
+                Smooth FPS
+              </div>
             </div>
         </div>
         <div class="gamecard multiplayer">
@@ -427,6 +427,12 @@
       </div>
     </div> <!--Container-->
   </footer>
+  <!--Modal-->
+  <div class="modal">
+    <div class="modal_content">
+        
+    </div>
+  </div>
   <!--JS-->
   <script src="./js/main.js"></script>
 </body>
